--- a/centos7/Dockerfile
+++ b/centos7/Dockerfile
@@ -4,4 +4,4 @@ MAINTAINER Michael Nikitochkin <miry.sof@gmail.com>
 RUN yum install -y deltarpm
 RUN yum update -y
 RUN yum install -y wget unzip autoconf bison flex gcc gcc-c++ kernel-devel make m4 patch
-RUN yum install -y java-1.8.0 mysql postgresql-server
+RUN yum install -y java-1.8.0 mysql postgresql-server git mercurial
