Minified images for centos. Updated spark. Teamcity agent.

--- a/spark/Dockerfile
+++ b/spark/Dockerfile
@@ -8,11 +8,12 @@ RUN yum install sbt -y
 # Create Spark User
 RUN adduser spark
 
-RUN mkdir -p /opt/spark
+RUN mkdir -p /opt/spark /app
 RUN curl -s http://d3kbcqa49mib13.cloudfront.net/spark-1.4.1-bin-hadoop2.6.tgz | tar --strip-components=1 -xvz -C /opt/spark
 
 ENV YOUR_SPARK_HOME /opt/sprak
 ENV PATH /opt/spark/bin:$PATH
 
-WORKDIR /opt/spark
-RUN chown spark:spark -R /opt/spark
+RUN chown spark:spark -R /opt/spark /app
+
+WORKDIR /app
