--- a/centos7/Dockerfile
+++ b/centos7/Dockerfile
@@ -1,7 +1,22 @@
 FROM centos:latest
 MAINTAINER Michael Nikitochkin <miry.sof@gmail.com>
 
-RUN yum install -y deltarpm
-RUN yum update -y
-RUN yum install -y wget unzip autoconf bison flex gcc gcc-c++ kernel-devel make m4 patch
-RUN yum install -y java-1.8.0 mysql postgresql-server git mercurial
+RUN yum install -y deltarpm && \
+    yum update -y && \
+    yum install -y \
+                  wget \
+                  unzip \
+                  autoconf \
+                  bison \
+                  flex \
+                  gcc \
+                  gcc-c++ \
+                  kernel-devel \
+                  make \
+                  m4 \
+                  patch \
+                  java-1.8.0 \
+                  mysql \
+                  postgresql-server \
+                  git \
+                  mercurial
