--- a/teamcity_agent/Dockerfile
+++ b/teamcity_agent/Dockerfile
@@ -3,7 +3,7 @@ MAINTAINER Michael Nikitochkin <miry.sof@gmail.com>
 
 #Install Docker
 # This will use the 1.6.2 release
-RUN wget -O /usr/local/bin/docker https://get.docker.io/builds/Linux/x86_64/docker-1.6.2
+RUN wget -O /usr/local/bin/docker https://get.docker.io/builds/Linux/x86_64/docker-1.8.2
 RUN chmod +x /usr/local/bin/docker
 ADD 10_wrapdocker.sh /etc/my_init.d/10_wrapdocker.sh
 RUN groupadd docker
@@ -19,7 +19,12 @@ RUN chown teamcity:teamcity /setup.sh
 RUN chmod +x /setup.sh
 
 #Ruby/Rails projects dependicies
-RUN yum install -y git-core zlib zlib-devel gcc-c++ patch readline readline-devel libyaml-devel libffi-devel openssl-devel make bzip2 autoconf automake libtool bison curl sqlite-devel zip
+RUN yum install -y \
+               ruby rubygems git-core zlib zlib-devel gcc-c++ patch \
+               readline readline-devel libyaml-devel libffi-devel \
+               openssl-devel make bzip2 autoconf automake libtool \
+               bison curl sqlite-devel zip ruby-dev mysql-devel ruby-devel rubygems
+
 RUN mkdir -p /opt
 RUN git clone https://github.com/sstephenson/rbenv.git /opt/rbenv
 RUN git clone https://github.com/sstephenson/ruby-build.git /opt/rbenv/plugins/ruby-build
@@ -30,12 +35,19 @@ RUN echo 'export RBENV_ROOT="/opt/rbenv"' >> /etc/profile.d/rbenv.sh # or /etc/p
 RUN echo 'eval "$(/opt/rbenv/bin/rbenv init -)"' >> /etc/profile.d/rbenv.sh # or /etc/profile
 ENV CONFIGURE_OPTS --disable-install-doc
 RUN echo 'gem: --no-rdoc --no-ri --no-document' >> /root/.gemrc
-RUN bash -l -c 'for i in "2.1.5" ; do rbenv install $i ; rbenv global $i; gem install bundler --no-document; done'
-#RUN bash -l -c 'for i in "2.2.2" "2.2.1" "2.2.0" "2.1.6" ; do rbenv install $i ; rbenv global $i; gem install bundler --no-document; done'
+RUN bash -l -c 'for i in "2.2.3" ; do rbenv install $i ; rbenv global $i; gem install bundler --no-document; done'
+#RUN bash -l -c 'for i in "2.1.1" "2.1.2" "2.1.5" "2.1.6" "2.2.1" "2.2.2" "2.2.3" ; do rbenv install $i ; rbenv global $i; gem install bundler --no-document; done'
 
 RUN chown teamcity:teamcity -R /opt/rbenv
 
-VOLUME /home/teamcity
+#VOLUME /home/teamcity
 
 #docker run -v /Users/miry/tmp/teamcity_agent:/home/teamcity -e TEAMCITY_SERVER=http://ci.jetthoughts.com -e DOCKER_HOST=tcp://192.168.59.103:2376 -e DOCKER_TLS_VERIFY=1 -e DOCKER_CERT_PATH=/home/teamcity/boot2docker-vm -it jetthoughts/teamcity-agent:latest 
-CMD su teamcity -l -c "TEAMCITY_SERVER=$TEAMCITY_SERVER DOCKER_HOST=$DOCKER_HOST DOCKER_TLS_VERIFY=$DOCKER_TLS_VERIFY DOCKER_CERT_PATH=$DOCKER_CERT_PATH /setup.sh run"
+#CMD su teamcity -l -c "TEAMCITY_SERVER=$TEAMCITY_SERVER DOCKER_HOST=$DOCKER_HOST DOCKER_TLS_VERIFY=$DOCKER_TLS_VERIFY DOCKER_CERT_PATH=$DOCKER_CERT_PATH /setup.sh run"
+CMD bash -c "chown teamcity:teamcity -R /home/teamctiy; su teamcity -l -c \"TEAMCITY_SERVER=$TEAMCITY_SERVER DOCKER_HOST=$DOCKER_HOST DOCKER_TLS_VERIFY=$DOCKER_TLS_VERIFY DOCKER_CERT_PATH=$DOCKER_CERT_PATH /setup.sh run\""
+
+RUN yum install -y epel-release qtwebkit-devel
+RUN yum install -y epel-release qtwebkit-devel
+RUN ln -s /usr/lib64/qt4/bin/qmake /usr/bin/qmake
+RUN yum install -y xorg-x11-server-Xvfb
+
