--- a/mesos/docker-compose.yml
+++ b/mesos/docker-compose.yml
@@ -1,14 +1,63 @@
+zookeeper:
+  image: jetthoughts/mesos
+  ports:
+    - 2181:2181
+    - 2888:2888
+    - 3888:3888
+  hostname: zookeeper
+  privileged: true
+  command: /usr/bin/java -cp /etc/zookeeper/conf:/usr/share/java/jline.jar:/usr/share/java/log4j-1.2.jar:/usr/share/java/xercesImpl.jar:/usr/share/java/xmlParserAPIs.jar:/usr/share/java/netty.jar:/usr/share/java/slf4j-api.jar:/usr/share/java/slf4j-log4j12.jar:/usr/share/java/zookeeper.jar -Dzookeeper.log.dir=/var/log/zookeeper -Dzookeeper.root.logger=INFO,ROLLINGFILE org.apache.zookeeper.server.quorum.QuorumPeerMain /etc/zookeeper/conf/zoo.cfg
+
+marathon:
+  image: jetthoughts/mesos
+  ports:
+    - "8080:8080"
+  hostname: marathon
+  privileged: true
+  environment:
+    - LANG=en_US.UTF-8
+    - LC_ALL=en_US.UTF-8
+  #links:
+  #  - master:master
+  #  - zookeeper:zookeeper
+  #command: marathon --master master --zk zk://zookeeper:2181/marathon
+  command: marathon --master zk://mesos_zookeeper_1:2181/mesos --zk zk://mesos_zookeeper_1:2181/marathon
 master:
   image: jetthoughts/mesos
   ports:
     - "5050:5050"
   hostname: master
   privileged: true
-  command: mesos-master --registry=in_memory --ip=0.0.0.0
+  command: mesos-master --registry=in_memory --ip=0.0.0.0 --zk=zk://mesos_zookeeper_1:2181/mesos
+  #links:
+  #  - zookeeper:zookeeper
 slave:
   image: jetthoughts/mesos
-  links:
-    - master:master
-  command: mesos-slave --master=master:5050
+  environment:
+    - DOCKER_TLS_VERIFY=0
+    - DOCKER_MACHINE_NAME="dev"
+    - DOCKER_HOST=tcp://172.16.76.129:2376
+    - DOCKER_CERT_PATH=/docker
+  volumes:
+    - /var/run/docker.sock:/var/run/docker.sock
+    - /Users/miry/.docker/machine/machines/dev:/docker:ro
+  command: mesos-slave --master=zk://mesos_zookeeper_1:2181/mesos --containerizers=docker,mesos --log_dir=/var/log/mesos
   privileged: true
+  hostname: slavea
+
+swarm:
+  environment:
+    - DOCKER_TLS_VERIFY=0
+    - DOCKER_MACHINE_NAME="dev"
+    - DOCKER_HOST=tcp://172.16.76.129:2376
+    - DOCKER_CERT_PATH=/docker
+  volumes:
+    - /var/run/docker.sock:/var/run/docker.sock
+    - /Users/miry/.docker/machine/machines/dev:/docker:ro
+  image: dockerswarm/swarm:0.3.0
+  ports:
+    - 2375:2375
+    - 3375:3375
+  command: manage -c mesos-experimental --cluster-opt mesos.address=172.18.0.4 --cluster-opt mesos.port=3375 zk://mesos_zookeeper_1:2181/mesos
+  hostname: mesos_swarm_manage_1
 
