--- a/teamcity_agent/Dockerfile
+++ b/teamcity_agent/Dockerfile
@@ -2,7 +2,7 @@ FROM jetthoughts/centos7
 MAINTAINER Michael Nikitochkin <miry.sof@gmail.com>
 
 #Install Docker
-# This will use the 1.6.2 release
+# This will use the 1.8.2 release
 RUN wget -O /usr/local/bin/docker https://get.docker.io/builds/Linux/x86_64/docker-1.8.2
 RUN chmod +x /usr/local/bin/docker
 ADD 10_wrapdocker.sh /etc/my_init.d/10_wrapdocker.sh
@@ -23,10 +23,10 @@ RUN yum install -y \
                ruby rubygems git-core zlib zlib-devel gcc-c++ patch \
                readline readline-devel libyaml-devel libffi-devel \
                openssl-devel make bzip2 autoconf automake libtool \
-               bison curl sqlite-devel zip ruby-dev mysql-devel ruby-devel rubygems
+               bison curl sqlite-devel zip ruby-dev mysql-devel ruby-devel rubygems \
+               epel-release qtwebkit-devel \
+               mariadb-server postgresql-server redis
 
-RUN yum install -y epel-release qtwebkit-devel
-RUN yum install -y epel-release qtwebkit-devel
 RUN ln -s /usr/lib64/qt4/bin/qmake /usr/bin/qmake
 RUN yum install -y xorg-x11-server-Xvfb
 RUN yum install -y psmisc
@@ -39,6 +39,7 @@ RUN git clone https://github.com/sstephenson/ruby-build.git /opt/rbenv/plugins/r
 RUN /opt/rbenv/plugins/ruby-build/install.sh
 ENV PATH /opt/rbenv/bin:$PATH
 RUN echo 'export PATH=/opt/rbenv/bin:$PATH' >> /etc/profile.d/rbenv.sh # or /etc/profile
+RUN echo 'export JAVA_HOME=/usr/lib/jvm/jre-1.8.0-openjdk' >> /etc/profile.d/rbenv.sh # or /etc/profile
 RUN echo 'export RBENV_ROOT="/opt/rbenv"' >> /etc/profile.d/rbenv.sh # or /etc/profile
 RUN echo 'eval "$(/opt/rbenv/bin/rbenv init -)"' >> /etc/profile.d/rbenv.sh # or /etc/profile
 ENV CONFIGURE_OPTS --disable-install-doc
@@ -50,11 +51,8 @@ RUN chown teamcity:teamcity -R /opt/rbenv
 
 VOLUME /home/teamcity
 
-CMD bash -c "chown teamcity:teamcity -R /home/teamctiy; su teamcity -l -c \"TEAMCITY_SERVER=$TEAMCITY_SERVER DOCKER_HOST=$DOCKER_HOST DOCKER_TLS_VERIFY=$DOCKER_TLS_VERIFY DOCKER_CERT_PATH=$DOCKER_CERT_PATH /setup.sh run\""
+CMD bash -c "chown teamcity:teamcity -R /home/teamcity; su teamcity -l -c \"TEAMCITY_SERVER=$TEAMCITY_SERVER DOCKER_HOST=$DOCKER_HOST DOCKER_TLS_VERIFY=$DOCKER_TLS_VERIFY DOCKER_CERT_PATH=$DOCKER_CERT_PATH /setup.sh run\""
 
-RUN yum install -y mariadb-server
 RUN mysql_install_db
 RUN chown mysql:mysql -R /var/lib/mysql
-RUN yum install -y postgresql-server
 RUN su postgres -l -c "/usr/bin/initdb /var/lib/pgsql/data/"
-RUN yum install -y redis
