Install xvfb for ruby chrome image

--- a/ruby-chrome/2.4.2/Dockerfile
+++ b/ruby-chrome/2.4.2/Dockerfile
@@ -18,7 +18,8 @@ RUN apt-get update && apt-get install -y \
              libreadline-dev \
              zlib1g-dev \
              build-essential \
-             g++\
+             g++ \
+             xvfb \
           && apt-get clean \
           && rm -rf /var/lib/apt/lists/*
 
