--- a/ruby-chrome/2.5.0/Dockerfile
+++ b/ruby-chrome/2.5.0/Dockerfile
@@ -40,6 +40,7 @@ ENV LANG=en_US.UTF-8
 ENV LANGUAGE=en_US.UTF-8
 ENV LC_ALL=en_US.UTF-8
 
-RUN gem update --system
+RUN gem update --system \
+ && gem install bundler
 
 CMD [ "irb" ]
