Kube: Replaced ADD with wget.

--- a/kubernetes/Dockerfile
+++ b/kubernetes/Dockerfile
@@ -1,8 +1,12 @@
 # miry/kubeadm
-FROM alpine
+FROM alpine:3.7
 
-ENV RELEASE="v1.11.0-alpha.2"
+RUN apk update && apk add ca-certificates && rm -rf /var/cache/apk/*
 
-ADD https://storage.googleapis.com/kubernetes-release/release/${RELEASE}/bin/linux/amd64/kubeadm /bin/kubeadm
-ADD https://storage.googleapis.com/kubernetes-release/release/${RELEASE}/bin/linux/amd64/kubelet /bin/kubelet
-ADD https://storage.googleapis.com/kubernetes-release/release/${RELEASE}/bin/linux/amd64/kubectl /bin/kubectl
+ARG RELEASE="v1.11.0-alpha.2"
+
+RUN cd /bin \
+ && wget -q https://storage.googleapis.com/kubernetes-release/release/${RELEASE}/bin/linux/amd64/kubeadm \
+ && wget -q https://storage.googleapis.com/kubernetes-release/release/${RELEASE}/bin/linux/amd64/kubelet \
+ && wget -q https://storage.googleapis.com/kubernetes-release/release/${RELEASE}/bin/linux/amd64/kubectl \
+ && chmod +x /bin/kube*
