--- a/kubernetes/Dockerfile
+++ b/kubernetes/Dockerfile
@@ -1,10 +1,10 @@
 # Repo: miry/kubernetes
-# Build: docker build --build-arg RELEASE=v1.11.0-beta.2 -t miry/kubernetes:v1.11.0-beta.2 .
+# Build: docker build --build-arg RELEASE=v1.11.0-rc.1 -t miry/kubernetes:v1.11.0-rc.1 .
 FROM alpine:3.7
 
 RUN apk update && apk add ca-certificates && rm -rf /var/cache/apk/*
 
-ARG RELEASE="v1.11.0-beta.2"
+ARG RELEASE="v1.11.0-rc.1"
 
 RUN cd /bin \
  && wget -q https://storage.googleapis.com/kubernetes-release/release/${RELEASE}/bin/linux/amd64/kubeadm \
