--- a/ruby-chrome/Dockerfile
+++ b/ruby-chrome/Dockerfile
@@ -45,7 +45,6 @@ ENV LANG=en_US.UTF-8
 ENV LANGUAGE=en_US.UTF-8
 ENV LC_ALL=en_US.UTF-8
 
-RUN gem update --system \
-  && gem install bundler
+RUN gem update --system
 
 CMD [ "irb" ]
