Kubernetes: upgrade default version to 1.14 and base latest alpine

--- a/kubernetes/Dockerfile
+++ b/kubernetes/Dockerfile
@@ -1,11 +1,11 @@
 # Repo: miry/kubernetes
 # Build: docker build --build-arg RELEASE=v1.11.7 -t miry/kubernetes:v1.11.7 .
-FROM alpine:3.8
+FROM alpine:edge
 
 RUN apk --no-cache add \
       ca-certificates
 
-ARG RELEASE="v1.13.5"
+ARG RELEASE="v1.14.0"
 
 RUN cd /bin \
  && wget -q https://storage.googleapis.com/kubernetes-release/release/${RELEASE}/bin/linux/amd64/kubeadm \
