--- a/cimg-ruby/Dockerfile
+++ b/cimg-ruby/Dockerfile
@@ -14,4 +14,5 @@ ARG CHROME_URL="https://dl.google.com/linux/direct/google-chrome-stable_current_
 RUN wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | sudo apt-key add - \
   && sudo sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list' \
   && sudo apt-get update \
-  && sudo apt-get install -y google-chrome-stable
+  && sudo apt-get install -y google-chrome-stable \
+  && rm -rf /var/lib/apt/lists/*
