--- a/cimg-ruby/Dockerfile
+++ b/cimg-ruby/Dockerfile
@@ -15,4 +15,5 @@ RUN wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | sudo apt-ke
   && sudo sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list' \
   && sudo apt-get update \
   && sudo apt-get install -y google-chrome-stable \
-  && rm -rf /var/lib/apt/lists/*
+  && rm -rf /var/lib/apt/lists/* \
+  && sudo sed -i 's|HERE/chrome"|HERE/chrome" --disable-gpu --disable-setuid-sandbox --no-sandbox|g' "/opt/google/chrome/google-chrome"
