--- a/.github/workflows/publish-cimg-ruby.yml
+++ b/.github/workflows/publish-cimg-ruby.yml
@@ -18,7 +18,7 @@ jobs:
   build-and-push-image:
     strategy:
       matrix:
-        version: [ "3.1", "3.0", "2.7" ]
+        version: [ "3.2", "3.1", "3.0", "2.7" ]
 
     runs-on: ubuntu-latest
     permissions:
@@ -64,6 +64,4 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           tags: |
             ${{ env.IMAGE_NAME }}:${{ matrix.version }}-chrome
-            ${{ env.IMAGE_NAME }}:latest
             ghcr.io/${{ env.IMAGE_NAME }}:${{ matrix.version }}-chrome
-            ghcr.io/${{ env.IMAGE_NAME }}:latest
