--- a/.github/workflows/publish-cimg-ruby.yml
+++ b/.github/workflows/publish-cimg-ruby.yml
@@ -21,7 +21,7 @@ jobs:
   build-and-push-image:
     strategy:
       matrix:
-        version: [ "3.2", "3.1", "3.0", "2.7" ]
+        version: [ "3.2", "3.1" ]
 
     runs-on: ubuntu-latest
     permissions:
