--- a/.github/workflows/publish-cimg-ruby.yml
+++ b/.github/workflows/publish-cimg-ruby.yml
@@ -21,7 +21,7 @@ jobs:
   build-and-push-image:
     strategy:
       matrix:
-        version: [ "3.4", "3.3", "3.2" ]
+        version: [ "3.4.3" ]
 
     runs-on: ubuntu-latest
     permissions:
