--- a/.github/workflows/publish-cimg-ruby.yml
+++ b/.github/workflows/publish-cimg-ruby.yml
@@ -1,5 +1,8 @@
 name: Create & Publish jetthoughts/cimg-ruby to DockerHub & GitHubCR
 
+# This workflow builds and publishes the cimg-ruby Docker image to DockerHub and GitHub Container Registry.
+# It runs on PRs, pushes to specific branches, manual triggers, and on a schedule.
+
 on:
   pull_request:
     paths:
@@ -19,7 +22,9 @@ env:
 
 jobs:
   build-and-push-image:
+    timeout-minutes: 30 # Prevent jobs from running indefinitely
     strategy:
+      fail-fast: false # Allow all matrix jobs to complete even if one fails
       matrix:
         version: [ "3.4" ]
 
@@ -37,6 +42,15 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+
+      # Ensure DockerHub credentials are present
+      - name: Check DockerHub credentials
+        run: |
+          if [ -z "${{ secrets.DOCKERHUB_USERNAME }}" ] || [ -z "${{ secrets.DOCKERHUB_TOKEN }}" ]; then
+            echo "DockerHub credentials are missing!"
+            exit 1
+          fi
+        shell: bash
 
       - name: Login to DockerHub
         uses: docker/login-action@v3
@@ -68,3 +82,19 @@ jobs:
           tags: |
             ${{ env.IMAGE_NAME }}:${{ matrix.version }}-chrome
             ghcr.io/${{ env.IMAGE_NAME }}:${{ matrix.version }}-chrome
+
+      # Optional: Verify image exists after push
+      - name: Verify Docker image
+        run: |
+          docker pull ${{ env.IMAGE_NAME }}:${{ matrix.version }}-chrome
+        shell: bash
+
+      # Security: Logout from registries
+      - name: Logout from DockerHub
+        run: docker logout
+        shell: bash
+
+      - name: Logout from GitHub Container Registry
+        run: docker logout ghcr.io
+        shell: bash
+
