--- a/.github/workflows/publish-cimg-ruby.yml
+++ b/.github/workflows/publish-cimg-ruby.yml
@@ -26,7 +26,7 @@ jobs:
     strategy:
       fail-fast: false # Allow all matrix jobs to complete even if one fails
       matrix:
-        version: [ "3.4" ]
+        version: [ "3.4", "3.3", "3.2" ]
 
     runs-on: ubuntu-latest
     permissions:
@@ -74,6 +74,8 @@ jobs:
           context: ./cimg-ruby/
           build-args: RUBY_VERSION=${{ matrix.version }}
           push: true
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
           labels: ${{ steps.meta.outputs.labels }}
           tags: |
             ${{ env.IMAGE_NAME }}:${{ matrix.version }}-chrome
